# quepintoyo

./: .gitignore  Cargo.toml  Rocket.toml  elm.json  old-pack
docs/: app.js  index.html
elm/: App.elm  Feed.elm  Jobs.elm  Login.elm  Tools.elm  Upload.elm
elm-bootstrap/src/Bootstrap/Form/: Input.elm
elm/Ctx/: Ctx.elm
elm/Feed/: Feed.elm
elm/Jobs/: Jobs.elm
elm/experiments/: Nested.elm  asyncImg.elm  cards.elm  editTasks.elm  ej1.elm  ej2.elm  ej3.elm
elm_generator/: Cargo.toml
elm_generator/src/: lib.rs
qpy-core/: Cargo.toml
qpy-server/: .gitignore  Cargo.toml
qpy-server/elm/: App.elm  Jobs.elm  Upload.elm  asyncImg.elm
qpy-server/src/: appstate.rs  conversion.rs  main.rs  web.rs
qpy-server/src/login/: error.rs  token.rs
qpy-server/static/: index.html  test.html
qpy_core/: Cargo.toml
qpy_core/src/: conversion.rs  db.rs  error.rs  lib.rs  structs.rs
qpy_feeder/: Cargo.toml  text.xml
qpy_feeder/src/: main.rs
qpy_server/: Cargo.toml
qpy_server/elm/: App.elm  Feed.elm  Route.elm
qpy_server/elm/experiments/: ports.elm
qpy_server/src/: appstate.rs  db.rs  error.rs  main.rs  web.rs
qpy_server/src/login/: token.rs
src/: App.elm  Jobs.elm  Tools.elm  appstate.rs  conversion.rs  db.rs  error.rs  main.rs  web.rs
src/login/: token.rs
static/: index.html  test.html
