[package]
name = "quepintoyo"
version = "0.1.0"
authors = ["Luis F. Ayuso <luis.ayuso@essteyr.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.0-rc.1"
mongodb = "0.3.12"

serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.33"

jsonwebtoken = "5.0.1"
rust-crypto = "0.2.36"

rand = "0.6.0"
hex = "0.3.2"

jwt = "0.4.0"
rustc-serialize = "0.3"


qpy_core = { path = "../qpy_core"}